[project]
name = "experiments"
version = "0.1.0"
description = "Notebooks and error-injection experiments consuming the dqmeasure library"
requires-python = ">=3.11"
dependencies = [
    "dqmeasure",
    "tab-err",
    "polars>=1.0",
    "pyarrow",
    "jupyter",
]

[dependency-groups]
dev = ["pytest"]
